--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : process.env.REACT_APP_FACEBOOK_APP_ID,
+          cookie     : true,
+          xfbml      : true,
+          version    : 'v16.0'
+        });
+          
+        FB.AppEvents.logPageView();   
+          
+      };
+
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <title>Superchat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
