--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : process.env.REACT_APP_FACEBOOK_APP_ID,
+          appId      : '%REACT_APP_FACEBOOK_APP_ID%',
           cookie     : true,
           xfbml      : true,
           version    : 'v16.0'
